# octopodes

./: README.md
octoRL/: .main.cpp.swo  .main.cpp.swp  CMakeLists.txt  README.md  \  cmaketroch.txt  main.cpp
octoRL/ArmExamples/: CMakeLists.txt  main.cpp
octoRL/armBuild/: CMakeCache.txt  Makefile  cmake_install.cmake  main
octoRL/configs/: a2c.cfg  a3c.cfg  cnndqn.cfg  cnntest.cfg  dqnAsync.cfg
octoRL/environment_test_data/: generate.py
octoRL/include/: AgentBase.hpp  AsyncLearner.hpp  Cnn.hpp  EnvironmentsBase.hpp  ExperienceReplay.hpp  Mlp.hpp  MpiTags.hpp  Policy.hpp  PolicyBase.hpp  Spaces.hpp  configure.hpp  driver.hpp  helper.hpp  quickTest.hpp
octoRL/include/agents/: A2C.hpp  A3C.hpp  DDPPO.hpp  Dqn.hpp  DqnAsync.hpp
octoRL/include/envs/: Acrobat.hpp  Blackjack.hpp  CNNTest.hpp  Cartpole.hpp  FrozenLake.hpp  Gridworld.hpp  MountainCar.hpp
octoRL/src/: Cnn.cpp  ExperienceReplay.cpp  Mlp.cpp  Policy.cpp  Spaces.cpp  configure.cpp  driver.cpp  helper.cpp  quickTest.cpp
octoRL/src/agents/: A2C.cpp  A3C.cpp  Dqn.cpp  DqnAsync.cpp
octoRL/src/envs/: Acrobats.cpp  Blackjack.cpp  CNNTest.cpp  Cartpole.cpp  MountainCar.cpp
octomatmul/: Makefile  README.MD  denseMatrix.h  sparseMatrix.h
octomatmul/config/: config.ini
octomatmul/include/: denseMatrix.h  helper.h  my_blas.h  my_matmul.h  sparseMatrix.h
octomatmul/src/: main.cpp
torchCPU/: pip-selfcheck.json
